Docs: avoid scrollbar on mobile (#4184)

--- a/doc/librenms.css
+++ b/doc/librenms.css
@@ -2,16 +2,24 @@ body {
     background-image:none !important;
 }
 
+/* limit the height of dropdown menus */
 .dropdown-menu {
     max-height: 400px !important;
     overflow-x: hidden !important;
 }
 
+/* pushdown the content when the header flows to two lines */
 .navbar-fixed-top {
     top: -70px;
     position: relative;
 }
 
+/* hide the menu called hidden, used to generate unlinked docs */
 #dropdown-hidden {
     display: none;
+}
+
+/* avoid scrollbar on mobile (default 360px) */
+.navbar-collapse {
+    max-height: 385px;
 }
